// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmailRow — 8 combo render snapshots (DESIGN.md §5.1) > dark · selected-read-normal 1`] = `
<article
  class="row email-row is-selected"
  data-flag="none"
  data-important="true"
  data-internal-id="101"
  data-pinned="false"
  data-priority="crit"
  data-read="true"
  data-thread="none"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="thread-chevron-cell"
  />
  <span
    aria-checked="false"
    aria-hidden="true"
    class="cb"
    role="checkbox"
  />
  <span
    aria-hidden="true"
    class="avatar avatar-5"
  >
    AL
  </span>
  <div
    class="row-content"
  >
    <div
      class="row-top"
    >
      <span
        class="sender-line"
      >
        <span
          class="sender-name"
        >
          Alice
        </span>
        <span
          class="recipient-hint"
        >
          , 
          alice@example.com
        </span>
         
        <span
          aria-label="English"
          class="lang-pip"
        >
          EN
        </span>
      </span>
      <span
        class="row-time"
      >
        2026/05/14 18:00
      </span>
    </div>
    <div
      class="subject-row"
    >
      <span
        class="subject-text"
      >
        redis timeout debug session
      </span>
      <span
        class="row-actions"
      >
        <button
          aria-label="Toggle flag"
          class="ricon ricon-flag"
          data-flag-state="0"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"
            />
            <line
              x1="4"
              x2="4"
              y1="22"
              y2="15"
            />
          </svg>
        </button>
        <button
          aria-label="Toggle pin"
          aria-pressed="false"
          class="ricon ricon-pin"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M16 4v6.59l3.71 3.71A1 1 0 0 1 19 16h-6v5l-1 1-1-1v-5H5a1 1 0 0 1-.71-1.71L8 10.59V4a1 1 0 0 1-1-1V2h10v1a1 1 0 0 1-1 1z"
            />
          </svg>
        </button>
        <span
          aria-label="2 attachments"
          class="ricon ricon-attach"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"
            />
          </svg>
        </span>
        <span
          aria-label="Important"
          class="ricon ricon-important"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="7"
              y2="13"
            />
            <circle
              cx="12"
              cy="17"
              fill="currentColor"
              r="1"
              stroke="none"
            />
          </svg>
        </span>
        <button
          aria-label="Archive"
          class="ricon ricon-delete"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <polyline
              points="3 6 5 6 21 6"
            />
            <path
              d="M19 6l-1 14a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2L5 6"
            />
          </svg>
        </button>
      </span>
    </div>
    <div
      class="body-preview"
    >
      Hey, the redis client keeps timing out after 5s.
    </div>
    <div
      class="ai-strip"
    >
      <span
        aria-hidden="true"
        class="pdot"
      />
      <span
        class="pname"
      >
        CRITICAL
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-reply ai-bit"
        title="需要回复"
      >
        需要回复
      </span>
      <span
        class="ml-auto inline-flex items-center gap-1 text-ink-fg-3"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-paperclip"
          fill="none"
          height="10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
          />
        </svg>
        <span
          class="tabular-nums"
        >
          2
        </span>
      </span>
    </div>
  </div>
</article>
`;

exports[`EmailRow — 8 combo render snapshots (DESIGN.md §5.1) > dark · selected-unread-normal 1`] = `
<article
  class="row email-row is-selected"
  data-flag="none"
  data-important="true"
  data-internal-id="101"
  data-pinned="false"
  data-priority="crit"
  data-read="false"
  data-thread="none"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="thread-chevron-cell"
  />
  <span
    aria-checked="false"
    aria-hidden="true"
    class="cb"
    role="checkbox"
  />
  <span
    aria-hidden="true"
    class="avatar avatar-5"
  >
    AL
  </span>
  <div
    class="row-content"
  >
    <div
      class="row-top"
    >
      <span
        class="sender-line"
      >
        <span
          class="sender-name"
        >
          Alice
        </span>
        <span
          class="recipient-hint"
        >
          , 
          alice@example.com
        </span>
         
        <span
          aria-label="English"
          class="lang-pip"
        >
          EN
        </span>
      </span>
      <span
        class="row-time"
      >
        2026/05/14 18:00
      </span>
    </div>
    <div
      class="subject-row"
    >
      <span
        class="subject-text"
      >
        redis timeout debug session
      </span>
      <span
        class="row-actions"
      >
        <button
          aria-label="Toggle flag"
          class="ricon ricon-flag"
          data-flag-state="0"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"
            />
            <line
              x1="4"
              x2="4"
              y1="22"
              y2="15"
            />
          </svg>
        </button>
        <button
          aria-label="Toggle pin"
          aria-pressed="false"
          class="ricon ricon-pin"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M16 4v6.59l3.71 3.71A1 1 0 0 1 19 16h-6v5l-1 1-1-1v-5H5a1 1 0 0 1-.71-1.71L8 10.59V4a1 1 0 0 1-1-1V2h10v1a1 1 0 0 1-1 1z"
            />
          </svg>
        </button>
        <span
          aria-label="2 attachments"
          class="ricon ricon-attach"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"
            />
          </svg>
        </span>
        <span
          aria-label="Important"
          class="ricon ricon-important"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="7"
              y2="13"
            />
            <circle
              cx="12"
              cy="17"
              fill="currentColor"
              r="1"
              stroke="none"
            />
          </svg>
        </span>
        <button
          aria-label="Archive"
          class="ricon ricon-delete"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <polyline
              points="3 6 5 6 21 6"
            />
            <path
              d="M19 6l-1 14a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2L5 6"
            />
          </svg>
        </button>
      </span>
    </div>
    <div
      class="body-preview"
    >
      Hey, the redis client keeps timing out after 5s.
    </div>
    <div
      class="ai-strip"
    >
      <span
        aria-hidden="true"
        class="pdot"
      />
      <span
        class="pname"
      >
        CRITICAL
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-reply ai-bit"
        title="需要回复"
      >
        需要回复
      </span>
      <span
        class="ml-auto inline-flex items-center gap-1 text-ink-fg-3"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-paperclip"
          fill="none"
          height="10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
          />
        </svg>
        <span
          class="tabular-nums"
        >
          2
        </span>
      </span>
    </div>
  </div>
</article>
`;

exports[`EmailRow — 8 combo render snapshots (DESIGN.md §5.1) > dark · unselected-read-normal 1`] = `
<article
  class="row email-row"
  data-flag="none"
  data-important="true"
  data-internal-id="101"
  data-pinned="false"
  data-priority="crit"
  data-read="true"
  data-thread="none"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="thread-chevron-cell"
  />
  <span
    aria-checked="false"
    aria-hidden="true"
    class="cb"
    role="checkbox"
  />
  <span
    aria-hidden="true"
    class="avatar avatar-5"
  >
    AL
  </span>
  <div
    class="row-content"
  >
    <div
      class="row-top"
    >
      <span
        class="sender-line"
      >
        <span
          class="sender-name"
        >
          Alice
        </span>
        <span
          class="recipient-hint"
        >
          , 
          alice@example.com
        </span>
         
        <span
          aria-label="English"
          class="lang-pip"
        >
          EN
        </span>
      </span>
      <span
        class="row-time"
      >
        2026/05/14 18:00
      </span>
    </div>
    <div
      class="subject-row"
    >
      <span
        class="subject-text"
      >
        redis timeout debug session
      </span>
      <span
        class="row-actions"
      >
        <button
          aria-label="Toggle flag"
          class="ricon ricon-flag"
          data-flag-state="0"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"
            />
            <line
              x1="4"
              x2="4"
              y1="22"
              y2="15"
            />
          </svg>
        </button>
        <button
          aria-label="Toggle pin"
          aria-pressed="false"
          class="ricon ricon-pin"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M16 4v6.59l3.71 3.71A1 1 0 0 1 19 16h-6v5l-1 1-1-1v-5H5a1 1 0 0 1-.71-1.71L8 10.59V4a1 1 0 0 1-1-1V2h10v1a1 1 0 0 1-1 1z"
            />
          </svg>
        </button>
        <span
          aria-label="2 attachments"
          class="ricon ricon-attach"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"
            />
          </svg>
        </span>
        <span
          aria-label="Important"
          class="ricon ricon-important"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="7"
              y2="13"
            />
            <circle
              cx="12"
              cy="17"
              fill="currentColor"
              r="1"
              stroke="none"
            />
          </svg>
        </span>
        <button
          aria-label="Archive"
          class="ricon ricon-delete"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <polyline
              points="3 6 5 6 21 6"
            />
            <path
              d="M19 6l-1 14a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2L5 6"
            />
          </svg>
        </button>
      </span>
    </div>
    <div
      class="body-preview"
    >
      Hey, the redis client keeps timing out after 5s.
    </div>
    <div
      class="ai-strip"
    >
      <span
        aria-hidden="true"
        class="pdot"
      />
      <span
        class="pname"
      >
        CRITICAL
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-reply ai-bit"
        title="需要回复"
      >
        需要回复
      </span>
      <span
        class="ml-auto inline-flex items-center gap-1 text-ink-fg-3"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-paperclip"
          fill="none"
          height="10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
          />
        </svg>
        <span
          class="tabular-nums"
        >
          2
        </span>
      </span>
    </div>
  </div>
</article>
`;

exports[`EmailRow — 8 combo render snapshots (DESIGN.md §5.1) > dark · unselected-unread-failed 1`] = `
<article
  class="row email-row"
  data-flag="none"
  data-important="true"
  data-internal-id="101"
  data-pinned="false"
  data-priority="crit"
  data-read="false"
  data-thread="none"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="thread-chevron-cell"
  />
  <span
    aria-checked="false"
    aria-hidden="true"
    class="cb"
    role="checkbox"
  />
  <span
    aria-hidden="true"
    class="avatar avatar-5"
  >
    AL
  </span>
  <div
    class="row-content"
  >
    <div
      class="row-top"
    >
      <span
        class="sender-line"
      >
        <span
          class="sender-name"
        >
          Alice
        </span>
        <span
          class="recipient-hint"
        >
          , 
          alice@example.com
        </span>
         
        <span
          aria-label="English"
          class="lang-pip"
        >
          EN
        </span>
      </span>
      <span
        class="row-time"
      >
        2026/05/14 18:00
      </span>
    </div>
    <div
      class="subject-row"
    >
      <span
        class="subject-text"
      >
        redis timeout debug session
      </span>
      <span
        class="row-actions"
      >
        <button
          aria-label="Toggle flag"
          class="ricon ricon-flag"
          data-flag-state="0"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"
            />
            <line
              x1="4"
              x2="4"
              y1="22"
              y2="15"
            />
          </svg>
        </button>
        <button
          aria-label="Toggle pin"
          aria-pressed="false"
          class="ricon ricon-pin"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M16 4v6.59l3.71 3.71A1 1 0 0 1 19 16h-6v5l-1 1-1-1v-5H5a1 1 0 0 1-.71-1.71L8 10.59V4a1 1 0 0 1-1-1V2h10v1a1 1 0 0 1-1 1z"
            />
          </svg>
        </button>
        <span
          aria-label="2 attachments"
          class="ricon ricon-attach"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"
            />
          </svg>
        </span>
        <span
          aria-label="Important"
          class="ricon ricon-important"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="7"
              y2="13"
            />
            <circle
              cx="12"
              cy="17"
              fill="currentColor"
              r="1"
              stroke="none"
            />
          </svg>
        </span>
        <button
          aria-label="Archive"
          class="ricon ricon-delete"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <polyline
              points="3 6 5 6 21 6"
            />
            <path
              d="M19 6l-1 14a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2L5 6"
            />
          </svg>
        </button>
      </span>
    </div>
    <div
      class="body-preview"
    >
      Hey, the redis client keeps timing out after 5s.
    </div>
    <div
      class="ai-strip"
    >
      <span
        aria-hidden="true"
        class="pdot"
      />
      <span
        class="pname"
      >
        CRITICAL
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-reply ai-bit"
        title="需要回复"
      >
        需要回复
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-failed ai-bit"
      >
        SYNC FAILED
      </span>
      <span
        class="ml-auto inline-flex items-center gap-1 text-ink-fg-3"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-paperclip"
          fill="none"
          height="10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
          />
        </svg>
        <span
          class="tabular-nums"
        >
          2
        </span>
      </span>
    </div>
  </div>
</article>
`;

exports[`EmailRow — 8 combo render snapshots (DESIGN.md §5.1) > light · selected-read-normal 1`] = `
<article
  class="row email-row is-selected"
  data-flag="none"
  data-important="true"
  data-internal-id="101"
  data-pinned="false"
  data-priority="crit"
  data-read="true"
  data-thread="none"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="thread-chevron-cell"
  />
  <span
    aria-checked="false"
    aria-hidden="true"
    class="cb"
    role="checkbox"
  />
  <span
    aria-hidden="true"
    class="avatar avatar-5"
  >
    AL
  </span>
  <div
    class="row-content"
  >
    <div
      class="row-top"
    >
      <span
        class="sender-line"
      >
        <span
          class="sender-name"
        >
          Alice
        </span>
        <span
          class="recipient-hint"
        >
          , 
          alice@example.com
        </span>
         
        <span
          aria-label="English"
          class="lang-pip"
        >
          EN
        </span>
      </span>
      <span
        class="row-time"
      >
        2026/05/14 18:00
      </span>
    </div>
    <div
      class="subject-row"
    >
      <span
        class="subject-text"
      >
        redis timeout debug session
      </span>
      <span
        class="row-actions"
      >
        <button
          aria-label="Toggle flag"
          class="ricon ricon-flag"
          data-flag-state="0"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"
            />
            <line
              x1="4"
              x2="4"
              y1="22"
              y2="15"
            />
          </svg>
        </button>
        <button
          aria-label="Toggle pin"
          aria-pressed="false"
          class="ricon ricon-pin"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M16 4v6.59l3.71 3.71A1 1 0 0 1 19 16h-6v5l-1 1-1-1v-5H5a1 1 0 0 1-.71-1.71L8 10.59V4a1 1 0 0 1-1-1V2h10v1a1 1 0 0 1-1 1z"
            />
          </svg>
        </button>
        <span
          aria-label="2 attachments"
          class="ricon ricon-attach"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"
            />
          </svg>
        </span>
        <span
          aria-label="Important"
          class="ricon ricon-important"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="7"
              y2="13"
            />
            <circle
              cx="12"
              cy="17"
              fill="currentColor"
              r="1"
              stroke="none"
            />
          </svg>
        </span>
        <button
          aria-label="Archive"
          class="ricon ricon-delete"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <polyline
              points="3 6 5 6 21 6"
            />
            <path
              d="M19 6l-1 14a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2L5 6"
            />
          </svg>
        </button>
      </span>
    </div>
    <div
      class="body-preview"
    >
      Hey, the redis client keeps timing out after 5s.
    </div>
    <div
      class="ai-strip"
    >
      <span
        aria-hidden="true"
        class="pdot"
      />
      <span
        class="pname"
      >
        CRITICAL
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-reply ai-bit"
        title="需要回复"
      >
        需要回复
      </span>
      <span
        class="ml-auto inline-flex items-center gap-1 text-ink-fg-3"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-paperclip"
          fill="none"
          height="10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
          />
        </svg>
        <span
          class="tabular-nums"
        >
          2
        </span>
      </span>
    </div>
  </div>
</article>
`;

exports[`EmailRow — 8 combo render snapshots (DESIGN.md §5.1) > light · selected-unread-normal 1`] = `
<article
  class="row email-row is-selected"
  data-flag="none"
  data-important="true"
  data-internal-id="101"
  data-pinned="false"
  data-priority="crit"
  data-read="false"
  data-thread="none"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="thread-chevron-cell"
  />
  <span
    aria-checked="false"
    aria-hidden="true"
    class="cb"
    role="checkbox"
  />
  <span
    aria-hidden="true"
    class="avatar avatar-5"
  >
    AL
  </span>
  <div
    class="row-content"
  >
    <div
      class="row-top"
    >
      <span
        class="sender-line"
      >
        <span
          class="sender-name"
        >
          Alice
        </span>
        <span
          class="recipient-hint"
        >
          , 
          alice@example.com
        </span>
         
        <span
          aria-label="English"
          class="lang-pip"
        >
          EN
        </span>
      </span>
      <span
        class="row-time"
      >
        2026/05/14 18:00
      </span>
    </div>
    <div
      class="subject-row"
    >
      <span
        class="subject-text"
      >
        redis timeout debug session
      </span>
      <span
        class="row-actions"
      >
        <button
          aria-label="Toggle flag"
          class="ricon ricon-flag"
          data-flag-state="0"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"
            />
            <line
              x1="4"
              x2="4"
              y1="22"
              y2="15"
            />
          </svg>
        </button>
        <button
          aria-label="Toggle pin"
          aria-pressed="false"
          class="ricon ricon-pin"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M16 4v6.59l3.71 3.71A1 1 0 0 1 19 16h-6v5l-1 1-1-1v-5H5a1 1 0 0 1-.71-1.71L8 10.59V4a1 1 0 0 1-1-1V2h10v1a1 1 0 0 1-1 1z"
            />
          </svg>
        </button>
        <span
          aria-label="2 attachments"
          class="ricon ricon-attach"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"
            />
          </svg>
        </span>
        <span
          aria-label="Important"
          class="ricon ricon-important"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="7"
              y2="13"
            />
            <circle
              cx="12"
              cy="17"
              fill="currentColor"
              r="1"
              stroke="none"
            />
          </svg>
        </span>
        <button
          aria-label="Archive"
          class="ricon ricon-delete"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <polyline
              points="3 6 5 6 21 6"
            />
            <path
              d="M19 6l-1 14a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2L5 6"
            />
          </svg>
        </button>
      </span>
    </div>
    <div
      class="body-preview"
    >
      Hey, the redis client keeps timing out after 5s.
    </div>
    <div
      class="ai-strip"
    >
      <span
        aria-hidden="true"
        class="pdot"
      />
      <span
        class="pname"
      >
        CRITICAL
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-reply ai-bit"
        title="需要回复"
      >
        需要回复
      </span>
      <span
        class="ml-auto inline-flex items-center gap-1 text-ink-fg-3"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-paperclip"
          fill="none"
          height="10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
          />
        </svg>
        <span
          class="tabular-nums"
        >
          2
        </span>
      </span>
    </div>
  </div>
</article>
`;

exports[`EmailRow — 8 combo render snapshots (DESIGN.md §5.1) > light · unselected-read-normal 1`] = `
<article
  class="row email-row"
  data-flag="none"
  data-important="true"
  data-internal-id="101"
  data-pinned="false"
  data-priority="crit"
  data-read="true"
  data-thread="none"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="thread-chevron-cell"
  />
  <span
    aria-checked="false"
    aria-hidden="true"
    class="cb"
    role="checkbox"
  />
  <span
    aria-hidden="true"
    class="avatar avatar-5"
  >
    AL
  </span>
  <div
    class="row-content"
  >
    <div
      class="row-top"
    >
      <span
        class="sender-line"
      >
        <span
          class="sender-name"
        >
          Alice
        </span>
        <span
          class="recipient-hint"
        >
          , 
          alice@example.com
        </span>
         
        <span
          aria-label="English"
          class="lang-pip"
        >
          EN
        </span>
      </span>
      <span
        class="row-time"
      >
        2026/05/14 18:00
      </span>
    </div>
    <div
      class="subject-row"
    >
      <span
        class="subject-text"
      >
        redis timeout debug session
      </span>
      <span
        class="row-actions"
      >
        <button
          aria-label="Toggle flag"
          class="ricon ricon-flag"
          data-flag-state="0"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"
            />
            <line
              x1="4"
              x2="4"
              y1="22"
              y2="15"
            />
          </svg>
        </button>
        <button
          aria-label="Toggle pin"
          aria-pressed="false"
          class="ricon ricon-pin"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M16 4v6.59l3.71 3.71A1 1 0 0 1 19 16h-6v5l-1 1-1-1v-5H5a1 1 0 0 1-.71-1.71L8 10.59V4a1 1 0 0 1-1-1V2h10v1a1 1 0 0 1-1 1z"
            />
          </svg>
        </button>
        <span
          aria-label="2 attachments"
          class="ricon ricon-attach"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"
            />
          </svg>
        </span>
        <span
          aria-label="Important"
          class="ricon ricon-important"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="7"
              y2="13"
            />
            <circle
              cx="12"
              cy="17"
              fill="currentColor"
              r="1"
              stroke="none"
            />
          </svg>
        </span>
        <button
          aria-label="Archive"
          class="ricon ricon-delete"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <polyline
              points="3 6 5 6 21 6"
            />
            <path
              d="M19 6l-1 14a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2L5 6"
            />
          </svg>
        </button>
      </span>
    </div>
    <div
      class="body-preview"
    >
      Hey, the redis client keeps timing out after 5s.
    </div>
    <div
      class="ai-strip"
    >
      <span
        aria-hidden="true"
        class="pdot"
      />
      <span
        class="pname"
      >
        CRITICAL
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-reply ai-bit"
        title="需要回复"
      >
        需要回复
      </span>
      <span
        class="ml-auto inline-flex items-center gap-1 text-ink-fg-3"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-paperclip"
          fill="none"
          height="10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
          />
        </svg>
        <span
          class="tabular-nums"
        >
          2
        </span>
      </span>
    </div>
  </div>
</article>
`;

exports[`EmailRow — 8 combo render snapshots (DESIGN.md §5.1) > light · unselected-unread-failed 1`] = `
<article
  class="row email-row"
  data-flag="none"
  data-important="true"
  data-internal-id="101"
  data-pinned="false"
  data-priority="crit"
  data-read="false"
  data-thread="none"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="thread-chevron-cell"
  />
  <span
    aria-checked="false"
    aria-hidden="true"
    class="cb"
    role="checkbox"
  />
  <span
    aria-hidden="true"
    class="avatar avatar-5"
  >
    AL
  </span>
  <div
    class="row-content"
  >
    <div
      class="row-top"
    >
      <span
        class="sender-line"
      >
        <span
          class="sender-name"
        >
          Alice
        </span>
        <span
          class="recipient-hint"
        >
          , 
          alice@example.com
        </span>
         
        <span
          aria-label="English"
          class="lang-pip"
        >
          EN
        </span>
      </span>
      <span
        class="row-time"
      >
        2026/05/14 18:00
      </span>
    </div>
    <div
      class="subject-row"
    >
      <span
        class="subject-text"
      >
        redis timeout debug session
      </span>
      <span
        class="row-actions"
      >
        <button
          aria-label="Toggle flag"
          class="ricon ricon-flag"
          data-flag-state="0"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"
            />
            <line
              x1="4"
              x2="4"
              y1="22"
              y2="15"
            />
          </svg>
        </button>
        <button
          aria-label="Toggle pin"
          aria-pressed="false"
          class="ricon ricon-pin"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M16 4v6.59l3.71 3.71A1 1 0 0 1 19 16h-6v5l-1 1-1-1v-5H5a1 1 0 0 1-.71-1.71L8 10.59V4a1 1 0 0 1-1-1V2h10v1a1 1 0 0 1-1 1z"
            />
          </svg>
        </button>
        <span
          aria-label="2 attachments"
          class="ricon ricon-attach"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <path
              d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"
            />
          </svg>
        </span>
        <span
          aria-label="Important"
          class="ricon ricon-important"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="7"
              y2="13"
            />
            <circle
              cx="12"
              cy="17"
              fill="currentColor"
              r="1"
              stroke="none"
            />
          </svg>
        </span>
        <button
          aria-label="Archive"
          class="ricon ricon-delete"
          type="button"
        >
          <svg
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
          >
            <polyline
              points="3 6 5 6 21 6"
            />
            <path
              d="M19 6l-1 14a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2L5 6"
            />
          </svg>
        </button>
      </span>
    </div>
    <div
      class="body-preview"
    >
      Hey, the redis client keeps timing out after 5s.
    </div>
    <div
      class="ai-strip"
    >
      <span
        aria-hidden="true"
        class="pdot"
      />
      <span
        class="pname"
      >
        CRITICAL
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-reply ai-bit"
        title="需要回复"
      >
        需要回复
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-failed ai-bit"
      >
        SYNC FAILED
      </span>
      <span
        class="ml-auto inline-flex items-center gap-1 text-ink-fg-3"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-paperclip"
          fill="none"
          height="10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
          />
        </svg>
        <span
          class="tabular-nums"
        >
          2
        </span>
      </span>
    </div>
  </div>
</article>
`;
